--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
+url: 'https://gigo96.github.io'
 baseurl: ''
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
