--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 theme: jekyll-theme-chirpy
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://gigo96.github.io"
+url: "https://chaneesong.github.io"
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
@@ -21,15 +21,15 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: gigo96 # the main title
+title: chaneesong # the main title
 
-tagline: gigo96's blog # it will display as the sub-title
+tagline: chaneesong's blog # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  gigo's blog
+  chaneesong's blog
 
 github:
-  username: gigo96 # change to your github username
+  username: chaneesong # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -42,7 +42,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/gigo96 # change to your github homepage
+    - https://github.com/chaneesong # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
