블로그 테스트 마무리

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: chaneesong's blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: 그날의 알고리즘 풀이와 에러처리를 기록하기 위한 블로그입니다. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  끝까지 가자
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://chaneesong.github.io"
@@ -41,7 +41,7 @@ social:
   email: sch102403@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
+    # - https://twitter.com/username # change to your twitter homepage
     - https://github.com/chaneesong # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
@@ -77,10 +77,10 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: "https://chirpy-img.netlify.app"
+img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: "https://avatars.githubusercontent.com/u/73852281?v=4"
 
 # boolean type, the global switch for ToC in posts.
 toc: true
