--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ""
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: ko
+lang: ko-KR
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Seoul
@@ -23,7 +23,6 @@ title: chaneesong's blog # the main title
 tagline: 그날의 알고리즘 풀이와 에러처리를 기록하기 위한 블로그입니다. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  끝까지 가자
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://chaneesong.github.io"
